(ml5717) Basic stages collapsing + style fixes (link collapsing missing)

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
-.fade {
-  position: relative;
-  height: 3rem;
-  line-height: 1.2rem;
-  overflow: hidden;
+.heider.opened {
+  transform: rotate(180deg) translateY(-5px);
 }
-.fade:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 0.6rem;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+
+.heider.collapsed {
+  transform: rotate(0deg) translateY(-5px);
+}
+
+.stage.opened {
+  margin-top: 1rem;
+  margin-bottom: -1rem;
+  max-height: calc(372px);
+  opacity: 1;
+}
+
+.stage.collapsed {
+  margin-top: 0;
+  margin-bottom: 0;
+  max-height: 0;
+  opacity: 0;
 }
